--- a/code-samples/index.html
+++ b/code-samples/index.html
@@ -9,25 +9,21 @@
 </head>
 
 <body> 
-	<div id = "logopic">
-		<img src = "" />
+	<div id = "logoPic">
+		<img src = "       " />
 	</div>
 	
+
 	<div id = "logo">
 		<p> TURNED ON! </p>
 	</div>
 	
+
 	<form action="database_filename" method = "get" >
 	Phone number : <input type="text" name = "phoneNum" size = "20"/>
-	<br/>
 	<input type="submit" value = "Submit!" />
 	<br/>
-	<hr/>
 	
-	<br/>
-	<p> select the food that you want to eat </p>
-	
-	<hr/>
 	select your interests in the list below : <br/>
 	<select name ="activity">
 		<option value = "0" >please choose from below </option>
