--- a/code-samples/index.html
+++ b/code-samples/index.html
@@ -9,21 +9,17 @@
 </head>
 
 <body> 
-	<div id = "logoPic">
+	<div id = "logo">
+		Turned On!
 		<img src = "       " />
 	</div>
 	
-
-	<div id = "logo">
-		<p> TURNED ON! </p>
-	</div>
-	
-
 	<form action="database_filename" method = "get" >
 	Phone number : <input type="text" name = "phoneNum" size = "20"/>
 	<input type="submit" value = "Submit!" />
 	<br/>
-	
+	<br/>
+
 	select your interests in the list below : <br/>
 	<select name ="activity">
 		<option value = "0" >please choose from below </option>
@@ -31,14 +27,8 @@
 		<option value = "2"> "hacking" </option>
 		<option value = "3"> "eating sushi" </option>		
 	</select>
-	
 	<br/>
 	<hr/>
-	please tell us about yourself: <br/>
-	
-	
-	<br/><hr/>
-	
 	</form>
 
 
