--- a/code-samples/index.html
+++ b/code-samples/index.html
@@ -1,37 +1,40 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-"http://www.w3.org/TR/xthml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 
 <html>
 	
 <head>
 	<title> Turned ON </title>
-	<link rel="stylesheet" type="text/css" href="theme.css">
+	<link rel="stylesheet" type="text/css" href="theme.css" />
 </head>
 
 <body> 
+
 	<div id = "logo">
 		Turned On!
 		<img src = "       " />
 	</div>
-	
-	<form action="database_filename" method = "get" >
-	Phone number : <input type="text" name = "phoneNum" size = "20"/>
-	<input type="submit" value = "Submit!" />
-	<br/>
-	<br/>
 
-	select your interests in the list below : <br/>
-	<select name ="activity">
-		<option value = "0" >please choose from below </option>
-		<option value = "1"> "puppy" </option>
-		<option value = "2"> "hacking" </option>
-		<option value = "3"> "eating sushi" </option>		
-	</select>
+
+	<div id = "phoneNum">	
+	<form action="database_filename" method = "get" >
+		Phone number : <input type="text" name = "phoneNum" size = "20"/>
+		<input type="submit" value = "Submit!" />
+		<br/>
+		<br/>
+	</form>
+	</div>
+
+	<form>
+		select your interests in the list below : <br/>
+		<select name ="activity">
+			<option value = "0" >please choose from below </option>
+			<option value = "1"> "puppy" </option>
+			<option value = "2"> "hacking" </option>
+			<option value = "3"> "eating sushi" </option>		
+		</select>
 	<br/>
 	<hr/>
 	</form>
-
-
 
 </body>
 
