--- a/code-samples/ajax-request.html
+++ b/code-samples/ajax-request.html
@@ -14,28 +14,14 @@
 	
 		function whatToDoIfAjaxCallSucceeded(data)
 		{
-			var items = [];
-			//i=0;
 			for (i = 0, len= data.length; i < len; i++)
-			{ 
-			  ValUserid = data[i].userid;
-			  ValStatus = data[i].status;
-			  $.each( data, function(ValUserid, ValStatus) {
-			    items.push( "<td id='" + ValUserid + "'>" + ValUserid + "</td>" );
-			  });
+			{
+			
+			  VarUserid = "<tr><td>" + data[i]["userid"] + "</td><td>" +
+			  data[i]["status"] + "</td><tr>";
+			  $("#useriddataFromTheServerWillGoHere").append(VarUserid);
 			}
-			  $( "<ul/>", {
-			    "class": "my-new-list",
-			    html: items.join( "" )
-			  }).appendTo( "body" );
-			//for (i = 0, len= data.length; i < len; i++)
-			//{ 
-			//  useridd = data[i]["userid"] + "<br>";
-			//  $("#useriddataFromTheServerWillGoHere").append(VarUserid);
-			//  statuss = data[i]["status"] + "<br>";
-			//  $("#statusdataFromTheServerWillGoHere").append(VarStatus);
-		//	}
-			  //$("#dataFromTheServerWillGoHere").html(data);
+			  $("#dataFromTheServerWillGoHere").html(data);
 			
 		}
 
@@ -50,13 +36,14 @@
 		<button type="button" id="thebutton" onclick="whatToDoIfAjaxCallSucceeded(data)">hi</button>
 	</form>
 	
-	<div id="useriddataFromTheServerWillGoHere"; >
+	<div id="useriddataFromTheServerWillGoHere" >
 		<ol>
 			hello
 		</ol>
 	</div>
 
-	<div id="statusdataFromTheServerWillGoHere">	
+	<div id="statusdataFromTheServerWillGoHere">
+		<ol> hii! </ol>
 	</div>
 </body>
 </html>
