--- a/static/code-samples/frontEnd/afterLogin.html
+++ b/static/code-samples/frontEnd/afterLogin.html
@@ -23,7 +23,10 @@
   </head>
 
 <body>
-	
+  <div class="col-md-6 col-md-offset-3 text-center wrap_title">
+    <h2>Testing!</h2>
+    <p class="lead" style="margin-top:0">hi</p>
+  </div>
 
 </body>
 </html>
