frontend index update

--- a/static/code-samples/frontEnd/index.html
+++ b/static/code-samples/frontEnd/index.html
@@ -55,10 +55,10 @@
     </nav>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
+    <div class="jumbotron" style = "background-image:url(jumbotron_bg.jpg)">
       <div class="container">
-        <h1>Hello!</h1>
-        <p>Turn on is a platform where you can connect with people with same interests around you!</p>
+        <h1 style = "color:white">Get TurnedOn Now!</h1>
+        <p style = "color:white">Connect instantly via text with people around you who share your interests!</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
       </div>
     </div>
@@ -66,10 +66,10 @@
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        <div class="col-md-4" style="float: right; margin-right: 50px">
+          <h2>Service Description</h2>
+          <p>TurnedOn is a text-based service which connects you to people in your area who share you interests. It does not require an internet connection, making it usable in remote areas and places without access to data. It also only keeps you connected while you are “TurnedOn”, making it easy to eliminate distractions. </p>
+          <p>To get started, make your account using your cell-phone number, then select your interests from a drop-down menu. Our service will connect you to others in your area by adding you to text chatrooms of your different interests. From the texting chatrooms of your different interests, it’s up to you to share information, meet in person or just chat!</p>
         </div>
       </div>
       <hr>
