--- a/static/code-samples/frontEnd/index.html
+++ b/static/code-samples/frontEnd/index.html
@@ -55,7 +55,8 @@
     </nav>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron" style = "background-image:url(jumbotron_bg.jpg)">
+      <div class="intro-header">
+            <div class="jumbotron" style = "background-image:url(jumbotron_bg.jpg)">
       <div class="container">
         <h1 style = "color:white">Get TurnedOn Now!</h1>
         <p style = "color:white">Connect instantly via text with people around you who share your interests!</p>
