create account portion added

--- a/static/code-samples/frontEnd/index.html
+++ b/static/code-samples/frontEnd/index.html
@@ -59,7 +59,7 @@
       <div id = "replaceAfterLogin1" class="container">
         <h1>Hello!</h1>
         <p>Turn on is a platform where you can connect with people with same interests around you!</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <button id = "createAcc" type="button" class="btn btn-success" onclick="create_account()">Don't have accoount? Create one!</button>
       </div>
     </div>
 
@@ -74,6 +74,38 @@
       </div>
       <hr>
     </div> <!-- /container -->
+
+    <div class="jumbotron" style = "height:700px">
+      <div id = "signscreen" class="container">
+        <h1>Create Account</h1>
+        <p>Create account and connect with people around you!</p>
+        <br/><hr/>
+        First Name : <input type="text" name = "username" size = "50"/>
+        <br/> <br/>
+        Phone Number : <input type="text" name = "username" size = "50"/>
+        <br/> <br/>
+        <p> select the city you live in: </p>
+        <hr/>
+        select among this list below : <br/>
+        <select name ="activity">
+        <option value = "0" >please choose from below </option>
+        <option value = "1"> "Providence" </option>
+        <option value = "2"> "New York" </option>
+        <option value = "3"> "LA" </option>
+        <option value = "4"> "Boston" </option>
+        <option value = "5"> "Chicago" </option>    
+        </select>
+        <br/><br/>
+        <form action="database_filename" method = "get" >
+          <input type="submit" value = "Create Account" />
+          <br/> <br/>
+          Verification Code : <input type = "password" name="password"/>
+          <br/>
+          <input type="submit" value = "Create Account" />
+        </form>
+
+      </div>
+    </div>
 
 
     <!-- Bootstrap core JavaScript
