--- a/static/code-samples/frontEnd/index.html
+++ b/static/code-samples/frontEnd/index.html
@@ -59,17 +59,17 @@
       </div>
     </nav>
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-<<<<<<< HEAD
-=======
-    <div class="jumbotron">
->>>>>>> FETCH_HEAD
-      <div class="container">
-        <h1 style = "color:white">Get TurnedOn Now!</h1>
-        <p style = "color:white">Connect instantly via text with people around you who share your interests!</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+      <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="IntroBg">
+      <div class="jumbotron">
+        <div class="container">
+          <h1 style = "color:white">Get TurnedOn Now!</h1>
+          <p style = "color:white">Connect instantly via text with people around you who share your interests!</p>
+          <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        </div>
       </div>
     </div>
+
 
     <div class="container">
       <!-- Example row of columns -->
