--- a/static/code-samples/frontEnd/index.html
+++ b/static/code-samples/frontEnd/index.html
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Turned ON</a>
+          <a class="navbar-brand" href="#"><b>Turned ON</b></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <div id = "tobereplaced">
