--- a/static/code-samples/frontEnd/index.html
+++ b/static/code-samples/frontEnd/index.html
@@ -44,7 +44,7 @@
             <div class="form-group">
               <input type="verification" id = "verify" placeholder = "Verficiation Code" class ="form-control" >
             </div>
-            <button id="signin"  onclick="login()" type="submit" class="btn btn-success">Sign in</button>
+            <button id="signin"  onclick="login()" type="button" class="btn btn-success">Sign in</button>
           </form>
           <form class="navbar-form navbar-right">
             <div class="form-group">
