--- a/static/code-samples/frontEnd/index.html
+++ b/static/code-samples/frontEnd/index.html
@@ -128,7 +128,7 @@
         for(i = 0, len= data.length; i < len; i++){
           var newDiv=document.createElement('option');
           code = data[i]["code"];
-          cityName = data[i]["Name"]; 
+          cityName = data[i]["name"]; 
           $(newDiv).attr("value",code);
           $(newDiv).append(cityName);
           // var html =  "<option value="+code+">"+cityName+"</option>";
