--- a/static/code-samples/frontEnd/index.html
+++ b/static/code-samples/frontEnd/index.html
@@ -59,7 +59,7 @@
       <div class="container-fluid">
         <h1 style = "color:white">Get TurnedOn Now!</h1>
         <p style = "color:white">Connect instantly via text with people around you who share your interests!</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <p><button  id="      "  onclick="  ()" type="button"   class="btn btn-primary btn-lg" >Learn more &raquo;</a></p>
       </div>
     </div>
 
@@ -76,8 +76,6 @@
       <hr>
     </div> <!-- /container -->
 
-<<<<<<< HEAD
-=======
     <div class="jumbotron" style = "height:700px">
       <div id = "signscreen" class="container">
         <h1>Create Account</h1>
@@ -108,8 +106,6 @@
 
       </div>
     </div>
-
->>>>>>> da3077ae216b2fc9bbb835d0025eb695353fe362
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
