--- a/static/code-samples/frontEnd/index.html
+++ b/static/code-samples/frontEnd/index.html
@@ -59,7 +59,8 @@
       <div class="container-fluid">
         <h1 style = "color:white">Get TurnedOn Now!</h1>
         <p style = "color:white">Connect instantly via text with people around you who share your interests!</p>
-        <p><button  id="      "  onclick="  ()" type="button"   class="btn btn-primary btn-lg" >Learn more &raquo;</a></p>
+        <button onclick="create_account()" type="button"  class="btn btn-primary btn-lg">Don't have account? Create one! </button>
+        <br/>
       </div>
     </div>
 
@@ -81,13 +82,13 @@
         <h1>Create Account</h1>
         <p>Create account and connect with people around you!</p>
         <br/>
-        First Name   : <input type="text" name = "username" size = "50"/>
+        First Name   : <input type="text" id = "firstname" name="username" size = "50"/>
         <br/> <br/>
 
-        <form action="database_filename" method = "get" >
+        <form>
         Phone Number : <input type="text" name = "username" size = "50"/>
         <br/><br/>
-        <input type="submit" value = "Get Verification Code" />
+        <button type="button" id = "getVerNum" onclick="getver()" class="btn btn-primary btn-lg"> Get Verification Code </button>
         <br/><br/>
         </form>
 
@@ -98,10 +99,10 @@
               
         </select>
         <br/><br/>
-        <form action="database_filename" method = "get" >
-          Verification Code : <input type = "password" name="password"/>
-          <br/>
-          <input type="submit" value = "Create Account" />
+        <form>
+          Verification Code : <input type = "code" name="verificationCode"/>
+          <br/><br/>
+          <button type="button" onclick="signupAccount()" class="btn btn-primary btn-lg" > Create Account </button>
         </form>
 
       </div>
