--- a/static/code-samples/frontEnd/index.html
+++ b/static/code-samples/frontEnd/index.html
@@ -56,15 +56,13 @@
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
-      <div class="container-fluid">
         <h1 style = "color:white">Get TurnedOn Now!</h1>
         <p style = "color:white">Connect instantly via text with people around you who share your interests!</p>
         <p><button  id="      "  onclick="  ()" type="button"   class="btn btn-primary btn-lg" >Learn more &raquo;</a></p>
-      </div>
     </div>
 
 
-    <div class="container">
+    <div id="container1">
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4" style="float: right; margin-right: 50px">
@@ -76,7 +74,8 @@
       <hr>
     </div> <!-- /container -->
 
-    <div class="jumbotron" style = "height:700px">
+
+    <div class="container2" style = "height:450px">
       <div id = "signscreen" class="container">
         <h1>Create Account</h1>
         <p>Create account and connect with people around you!</p>
